packages/typ/tests/fixtures/diagnostics/0314_fun_recursive_self_application_08.ml.infer.expected
File "0314_fun_recursive_self_application_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0314_fun_recursive_self_application_08 is not a valid module name.

File "0314_fun_recursive_self_application_08.ml", line 1, characters 24-25:
1 | let rec bad_theta x = x x
                            ^
Error: The value x has type 'a -> 'b but an expression was expected of type
         'a
       The type variable 'a occurs inside 'a -> 'b
