packages/typ/tests/fixtures/diagnostics/0314_fun_recursive_self_application_08.ml
let rec bad_theta x = x x
